# RFID_TMReader

./: CMakeLists.txt  README.md
c_lib/api/: rfid_api.c  rfid_types.h
example/: .CMakeLists.txt.swp  CMakeLists.txt  main.c
include/: mercuryapi.h
ros2_ws/src/rfid_tmreader_node/: CMakeLists.txt  package.xml
ros2_ws/src/rfid_tmreader_node/src/: rfid_tmreader_node.cpp
src/: mercuryapi_version.c  mercuryapi_wrapper.c
